Bug 840154 - Do not release MediaBuffer during OMXCodec is seeking. r=cdouble