content/media/omx/MediaOmxReader.cpp
@@ -24,7 +24,6 @@ namespace mozilla {
 
 MediaOmxReader::MediaOmxReader(AbstractMediaDecoder *aDecoder) :
   MediaDecoderReader(aDecoder),
-  mOmxDecoder(nullptr),
   mHasVideo(false),
   mHasAudio(false),
   mVideoSeekTimeUs(-1),
@@ -51,7 +50,7 @@ nsresult MediaOmxReader::ReadMetadata(VideoInfo* aInfo,
 
   *aTags = nullptr;
 
-  if (!mOmxDecoder) {
+  if (!mOmxDecoder.get()) {
     mOmxDecoder = new OmxDecoder(mDecoder->GetResource(), mDecoder);
     mOmxDecoder->Init();
   }
@@ -117,10 +116,7 @@ nsresult MediaOmxReader::ResetDecode()
     delete mLastVideoFrame;
     mLastVideoFrame = nullptr;
   }
-  if (mOmxDecoder) {
-    delete mOmxDecoder;
-    mOmxDecoder = nullptr;
-  }
+  mOmxDecoder.clear();
   return NS_OK;
 }
 
@@ -334,7 +330,7 @@ static uint64_t BytesToTime(int64_t offset, uint64_t length, uint64_t durationUs
 
 nsresult MediaOmxReader::GetBuffered(nsTimeRanges* aBuffered, int64_t aStartTime)
 {
-  if (!mOmxDecoder)
+  if (!mOmxDecoder.get())
     return NS_OK;
 
   MediaResource* stream = mOmxDecoder->GetResource();
