content/media/omx/OmxDecoder.h
@@ -10,14 +10,20 @@
 #include "MediaResource.h"
 #include "AbstractMediaDecoder.h"
 
+namespace android {
+class OmxDecoder;
+};
+
 namespace mozilla {
 namespace layers {
 
 class VideoGraphicBuffer : public GraphicBufferLocked {
   // XXX change this to an actual smart pointer at some point
   android::MediaBuffer *mMediaBuffer;
+  android::wp<android::OmxDecoder> mOmxDecoder;
   public:
-    VideoGraphicBuffer(android::MediaBuffer *aBuffer,
+    VideoGraphicBuffer(const android::wp<android::OmxDecoder> aOmxDecoder,
+                       android::MediaBuffer *aBuffer,
                        SurfaceDescriptor *aDescriptor);
     ~VideoGraphicBuffer();
     void Unlock();
@@ -62,7 +68,7 @@ private:
   MediaStreamSource &operator=(const MediaStreamSource &);
 };
 
-class OmxDecoder {
+class OmxDecoder : public RefBase {
   typedef MPAPI::AudioFrame AudioFrame;
   typedef MPAPI::VideoFrame VideoFrame;
   typedef mozilla::MediaResource MediaResource;
@@ -98,11 +104,26 @@ class OmxDecoder {
   MediaBuffer *mVideoBuffer;
   MediaBuffer *mAudioBuffer;
 
+  // Hold video's MediaBuffers that are released during video seeking.
+  // The holded MediaBuffers are released soon after seek completion.
+  // OMXCodec does not accept MediaBuffer during seeking. If MediaBuffer is
+  //  returned to OMXCodec during seeking, OMXCodec calls assert.
+  Vector<MediaBuffer *> mPendingVideoBuffers;
+  // Show if OMXCodec is seeking.
+  bool mIsVideoSeeking;
+  // The lock protects video MediaBuffer release()'s pending operations called
+  //  from multiple threads. The pending operations happen only during video
+  //  seeking. Holding mSeekLock long time could affect to video rendering.
+  // Holding time should be minimum.
+  Mutex mSeekLock;
+
   // 'true' if a read from the audio stream was done while reading the metadata
   bool mAudioMetadataRead;
 
   void ReleaseVideoBuffer();
   void ReleaseAudioBuffer();
+  // Call with mSeekLock held.
+  void ReleaseAllPendingVideoBuffersLocked();
 
   void PlanarYUV420Frame(VideoFrame *aFrame, int64_t aTimeUs, void *aData, size_t aSize, bool aKeyFrame);
   void CbYCrYFrame(VideoFrame *aFrame, int64_t aTimeUs, void *aData, size_t aSize, bool aKeyFrame);
@@ -149,6 +170,8 @@ public:
   MediaResource *GetResource() {
     return mResource;
   }
+
+  bool ReleaseVideoBuffer(MediaBuffer *aBuffer);
 };
 
 }
